fix incident table alignment

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -34,3 +34,7 @@ body {
         display: none !important;
     }
 }
+
+.incident-table tbody>tr>td {
+    vertical-align: middle;
+}
